--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "node-mailjet": "^6.0.11",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0"
